Wizard: Fixed connections between shelves
